# world-of-claudecraft

./: .env.example  .gitignore  AGENTS.md  CREDITS.md  DEPLOY.md  README.md  docker-compose.otel.yml  docker-compose.yml  index.html  package-lock.json  package.json
.context-engine/: git_history_cache.json
deploy/otel/: collector.yaml
docs/: OBSERVABILITY.md  agent-observable-state.md
python/: test_wow_env.py  wow_env.py
scripts/: squad_visual.mjs  tour_castle.mjs
server/: admin.ts  auth.ts  db.ts  game.ts  game_persistence.ts  main.ts  moderation_db.ts  postgres_game_persistence.ts  ratelimit.ts  report_target.ts  social.ts  social_db.ts  stdb_bridge.ts  stdb_persistence.ts  telemetry.ts
src/: main.ts  world_api.ts
stdb/: Cargo.toml
stdb/src/: lib.rs
tests/: admin.test.ts  admin_tables.test.ts  arena.test.ts  bandwidth.test.ts  camera_follow.test.ts  chat.test.ts  chat_history.test.ts  chat_log.test.ts  client_shell.test.ts  dialogue_text.test.ts  diremaw.test.ts  fixes.test.ts  friend_invites.test.ts  game_sessions.test.ts  gfx.test.ts  homepage_foundation.test.ts  hud_inventory.test.ts  input.test.ts  interactions.test.ts  interest.test.ts  keybinds.test.ts  leaderboard_db.test.ts  market.test.ts  mobile_controls.test.ts  moderation_db.test.ts  move_input.test.ts  online_connection.test.ts  pointer_pick.test.ts  report_target.test.ts  security.test.ts  settings.test.ts  sim.test.ts  snapshots.test.ts  social_system.test.ts  spacetime_backend.test.ts  squad.test.ts  start_flow_state.test.ts  start_screen.test.ts  stdb_client.test.ts  threat.test.ts
(+118 files in other folders)
