[package]
name = "worldofclaudecraft-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pbkdf2 = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spacetimedb = { version = "=2.3.0", features = ["unstable", "rand"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug_reducers)'] }
